Include database support to docker.

--- a/APIForAutomation/appsettings.json
+++ b/APIForAutomation/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=APIForAutomation;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Connection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=APIForAutomation;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "ConnectionSqLite": "Filename=APIForAutomation.db;"
   }
 }
